# nanogld

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  EXPERIMENTS.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: smoke-test.yml  test.yml
configs/: v1_main.yaml
data/: README.md
docs/: REPRODUCE.md  SETUP.md
plan/: 00-OVERVIEW.md  01-DATA-PIPELINE.md  01-INFRA-AND-SECURITY.md  02-DATA-PIPELINE.md  02-FEATURE-ENGINEERING.md  03-MODEL-ARCHITECTURE.md  03-NEWS-EMBEDDING.md  04-FEATURE-ENGINEERING.md  04-NEWS-EMBEDDING.md  05-MODEL-ARCHITECTURE.md  05-MODEL-TRAINING-CALIBRATION.md  05-TRAINING-PROCEDURE.md  06-BACKTEST.md  06-TRAINING-PROCEDURE.md  07-CALIBRATION.md  07-SIZING-AND-EXITS.md  07-SIZING-STAGE2.md  08-BACKTEST.md  08-LIVE-TRADING.md  09-LIVE-TRADING.md  09-SIZING-STAGE2.md  10-EXITS-AND-RISK.md  10-INFRA-AND-SECURITY.md  11-LIVE-TRADING.md  HANDOFF.md  STATUS.md  V1-SPEC.md
scripts/: build_v1_sidecar.py  mac_mini_launch.sh  mac_mini_pull_artifacts.sh  mac_mini_setup.sh  mac_mini_train.sh  runpod_pull_artifacts.sh  runpod_setup.sh  runpod_train.sh  spark_clean.sh  spark_pull_artifacts.sh  spark_setup.sh  spark_sync.sh  spark_tmux_launch.sh  spark_train.sh  upload_data_to_hf.py
src/nanogld/: _atomic.py  _manifest.py
tests/: conftest.py  test_atomic.py  test_features.py  test_features_v2.py  test_join_schema.py  test_manifest.py  test_news_pipeline.py  test_no_leakage.py  test_pit.py  test_smoke.py  test_snapshot_hash.py
tests/analysis/: test_config.py  test_feature_groups.py  test_modality_ablation.py  test_report.py
tests/backtest/: test_backtest.py  test_new_baselines.py  test_walk_forward.py
tests/calibration/: test_calibration.py  test_hardening.py  test_inference.py
tests/data/: test_integrity.py  test_v1_atr.py  test_v1_dataset.py  test_v1_h5.py  test_v1_hmm_regime.py  test_v1_regime.py  test_v1_spread.py  test_v1_triple_barrier.py  (+1 more)
(+178 files in other folders)
